--- a/hacker.css
+++ b/hacker.css
@@ -1,5 +1,13 @@
+html {
+	background: black;
+	height: 100%;
+	overflow: hidden;
+}
+
 body {
 	background-color: black;
+	margin: 0;
+	height: 100%;
 }
 
 p {
